@@ -320,8 +320,8 @@
 		</loop>
 	</tab>
 	<!-- TAB ACTORS -->
-	<tab condition="{isseries}||{ismovie}" name="{tr(actors)}" x="5%" y="25%" width="93%" height="63%" layer="3" scrollheight="{areaheight}/2">
-		<loop name="actors" x="0" y="0" width="{areawidth}" orientation="horizontal" columnwidth="{areawidth}/4.2" rowheight="{areawidth}/4*1.6" overflow="linewrap">
+	<tab condition="{isseries}||{ismovie}" name="{tr(actors)}" x="5%" y="25%" width="93%" height="63%" layer="3" scrollheight="{areaheight}*0.63">
+		<loop name="actors" x="0" y="0" width="{areawidth}" orientation="horizontal" columnwidth="{areawidth}/4.2" rowheight="{areawidth}/4.2*1.6" overflow="linewrap">
 			<drawimage name="thumb" imagetype="image" path="{actors[thumb]}" x="20" y="0" width="{columnwidth}-40" height="{columnwidth} * {actors[thumbheight]} / {actors[thumbwidth]} - 40 * {actors[thumbheight]} / {actors[thumbwidth]}"/>
 			<drawtext align="center" y="{height(thumb)} + 10" width="{columnwidth}" name="actorname" font="{light}" fontsize="5%" color="{clrLightGray}" text="{actors[name]}" />
 			<drawtext align="center" y="{height(thumb)} + 10 + {height(actorname)}" width="{columnwidth}" font="{light}" fontsize="5%" color="{clrLightGray}" text="{actors[role]}" />
