@@ -3,6 +3,7 @@ shady-KISS-skin History
 2016-02-13:
 - Fixed posterBGDetail in detailepg
 - Special treatment for div columns with only one column
+- Adjusted scrollheight in tab actors (hopefully fixed)
 
 2016-02-12:
 - Fixed scaling of videowindow in weatherforecast
